# memogarden-system

./: .gitignore  README.md  pyproject.toml  run_tests.sh
.github/workflows/: deploy.yml
system/: __init__.py  config.py  exceptions.py  fragment.py  schemas.py  transaction_coordinator.py
system/core/: __init__.py  artifact.py  context.py  conversation.py  entity.py  query.py  recurrence.py  relation.py  seed.py  transaction.py  types.py
system/host/: __init__.py  environment.py  filesystem.py  time.py
system/schemas/sql/: core.sql  soil.sql
system/schemas/sql/migrations/: 00002_add_scope_table.sql  00003_rename_project_to_scope.sql  00004_add_conversationlog_entity.sql  002_add_context_scope_columns.sql  003_add_audit_fact_types.sql  migrate_20251223_to_20251229.sql  migrate_20251229_to_20251230.sql  migrate_20251230_to_20260129.sql
system/schemas/types/entities/: conversationlog.schema.json  scope.schema.json  transaction.schema.json
system/schemas/types/facts/: action.schema.json  email.schema.json  message.schema.json
system/schemas/types/items/: actionresult.schema.json  message.schema.json  note.schema.json
system/soil/: __init__.py  database.py  fact.py  item.py  relation.py
system/utils/: __init__.py  uid.py
tests/: README.md  conftest.py  test_artifact_delta.py  test_conversation_fold.py  test_cross_db_experiment.py  test_fragment.py  test_rfc004_deployment.py  test_schemas.py  test_scope_entity.bak  test_scope_entity.py  test_soil_characterization.py  test_transaction_coordinator.py
