[tool.poetry]
name = "memogarden-system"
version = "0.1.0"
description = "MemoGarden System - Soil and Core business logic layers"
authors = ["MemoGarden Contributors"]
readme = "README.md"
packages = [{include = "system"}]

# Include schema files in the package distribution (RFC-004)
include = [
    "system/schemas/**/*.sql",
    "system/schemas/**/*.json",
]

[tool.poetry.dependencies]
python = "^3.13"
tomli = {version = "^2.0.0", python = "<3.11"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^7.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
